Bug fix : New Story alignment issue

--- a/src/app/components/newstory/newstory.component.scss
+++ b/src/app/components/newstory/newstory.component.scss
@@ -12,15 +12,25 @@
 }
 
 .form-title-field {
-    flex: 2;
+    flex: 1;
 }
 
-@media (min-width:1025px){
-    .form-title-field {
-        flex: 10;
-    }  
+@media (max-width:1600px){
+    .story-preview{
+        margin-top: 2rem; 
+    }
+}
+
+@media (min-width:1600px){  
     .new-story-editor { 
         display: flex;
+    }
+    .story-form-container{
+        width: 70%;
+    }
+
+    .story-preview{
+        width: 25%;
     }
 }
 
@@ -112,12 +122,10 @@ button {
 }
 
 .story-form-container {
-    flex-basis: 60%;
     border: 1px solid $input-border-color ;
 }
 
 .story-preview {
-    flex-basis: 30%;
     border: 1px solid $input-border-color ;
 }
 
