--- a/src/app/components/story-details/story-details.component.scss
+++ b/src/app/components/story-details/story-details.component.scss
@@ -14,6 +14,8 @@
 .story-title {
     font: $display-1;
     margin: 1em 0 1em 0;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 .story-author-details {
