--- a/src/assets/scss/__typography.scss
+++ b/src/assets/scss/__typography.scss
@@ -1,4 +1,4 @@
-$font-familiy : nunito-sans-light;
+$font-familiy : nunito-sans-light, Helvetica Neue,Helvetica,Arial,sans-serif;
 $display-4:     300 112px/112px $font-familiy;
 $display-3:     400 56px/56px $font-familiy;
 $display-2:     400 45px/48px $font-familiy;
